--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+.welcome{
+  height: 400px;
+  width: 300px;
+}
+*{
+  margin: 0;
+  padding: 0;
+}
+/* body{
+  background-color: rgb(199, 192, 192);
+} */
+.form-body{
+   border: 2px solid rgb(92, 92, 95); 
+  width: 500px;
+  height: 400px;
+  border-radius: 30px;
+  background-color: rgb(253, 249, 249);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+input{
+  margin: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.containers{
+  background-image: url('https://wallpaperaccess.com/full/3214373.jpg');
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100vh;
+  width: 100vw;
+  background-attachment: fixed;
 }
